--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 </head>
 <body>
-<header>master</header>
+<header>master
+<h1>este es un header</h1>
+</header>
 <section></section>
 <footer></footer>
 </body>
