--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 </head>
 <body>
-<header>LIKE A FUCKING BOSS
-<h1>este es un header</h1>
+  <header>LIKE A FUCKING BOSS
+  <h1>este es un header</h1>
 </header>
-<section></section>
+<section>ESTO ES UN SECTION</section>
 <footer>Esto es un footer</footer>
 </body>
 </html>
